--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "serve": "http-serve ./",
     "dev": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC"
