--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "phaser-ce": "^2.10.0"
   },
   "devDependencies": {
+    "expose-loader": "^0.7.4",
     "http-serve": "^1.0.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
